# AI_written_book_-

./: CNAME  README.md  activate_env.bat  activate_env.ps1  docusaurus.config.ts  hackathon.md  indexing_script.py  main.py  package-lock.json  package.json  pyproject.toml  sidebars.ts  tailwind.config.js
docs/: overview.md
docs/assessments/: assessment-1-ros.md  assessment-2-gazebo.md  assessment-4-capstone.md  introduction.md
docs/introduction/: 01-vision-of-embodied-ai.md  02-history-robotics-ai.md  03-foundational-concepts.md  04-sensor-modalities.md
docs/module1-ros/: 01-architecture-communication.md  03-launch-files-orchestration.md  04-data-management-visualization.md
docs/module2-simulation/: 04-advanced-simulation.md
docs/module3-ai/: 02-isaac-ros-gems.md  03-reinforcement-learning.md  04-sim-to-real-transfer.md
docs/module4-vla/: 01-llms-cognitive-engines.md  04-humanoid-manipulation-grasping.md  05-ethical-future.md  05-human-robot-interaction-design.md
docs/part4-capstone/conversational-robotics/: 03-multi-modal-interaction.md
frontend/: deploy.yml  docusaurus.config.ts  mn.md  package-lock.json  package.json  sidebars.ts
frontend/docs/: hardware-requirements.md  learning-outcomes.md  overview.md
frontend/docs/assessments/: 00-Introduction.md  03-assessment-isaac.md
frontend/docs/introduction/: 02-history-robotics-ai.md  04-sensor-modalities.md  (+1 more)
specs/001-ai-powered-book/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/1-ai-powered-book/: spec.md
src/css/: custom.css
src/pages/: index.module.css  index.tsx
(+40 files in other folders)
