[project]
name = "ai-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chardet>=5.2.0",
    "fastapi>=0.125.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.1",
    "langchain-text-splitters>=1.1.0",
    "python-dotenv>=1.2.1",
    "qdrant-client==1.7.3",
    "uvicorn>=0.38.0",
]
